etc/kubernetes/aralez-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aralez-service
  namespace: aralez
spec:
  type: NodePort
  selector:
    app: aralez
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
