etc/kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: upstreams
spec:
  selector:
    app: svc-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
