etc/kubernetes/nginx-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-v2
  namespace: upstreams
spec:
  selector:
    app: svc-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
