etc/kubernetes/ingress.yaml
# Define your Ingress resource targeting Aralez
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-v2
  namespace: upstreams
  annotations:
    # Custom annotations parsed by Aralez
    aralez.rs/rate_limit: "100"
    aralez.rs/x4xx_limit: "20"
    aralez.rs/client_headers: '["X-Proxy-From:Aralezzzzzzzzzzz", "X-Hopar-From:Hopaaaaaaaaaaaar"]'
    aralez.rs/server_headers: '["X-Proxy-Version:Aralez", "X-Po-From:Kung Fu Panda"]'
spec:
  ingressClassName: aralez  # Matches the IngressClass metadata.name above
  rules:
    - host: api-service-v2.blabla.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service-v2
                port:
                  number: 80
---
# Define your Ingress resource targeting Aralez
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wss-service-v2
  namespace: upstreams
  annotations:
    # Custom annotations parsed by Aralez
    aralez.rs/rate_limit: "50"
    aralez.rs/x4xx_limit: "10"
    aralez.rs/client_headers: '["X-Hors-Arev:Naturi", "X-Grand-Master:Oogway"]'
    aralez.rs/server_headers: '["X-Mors-Arev:Hastat", "X-Shifu-Master:Shifu"]'
spec:
  ingressClassName: aralez  # Matches the IngressClass metadata.name above
  rules:
    - host: wss-service-v2.blabla.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-nginx
                port:
                  number: 80

---
# Define your Ingress resource targeting Aralez
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joj-service-v2
  namespace: upstreams
spec:
  ingressClassName: aralez  # Matches the IngressClass metadata.name above
  rules:
    - host: joj-service-v2.blabla.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-nginx
                port:
                  number: 80
